--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@types/stripe-v3": "^3.1.23",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
